# forecast-pipeline

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  DEPENDENCIES.md  Dockerfile  Dockerfile.advanced  INTERVIEW_PREP.md  LICENSE  PORT_CONFIGURATION.md  README.md  README_STREAMLIT_CLOUD.md  STREAMLIT_CLOUD.md  add_data.py  add_drift_data.py  add_test_data.py  check_data.py  config.yaml  create_kaggle_json.sh  create_pr.md  deploy_to_streamlit.sh  docker-compose.advanced.yml  docker-compose.yml  download_instructions.md  dvc.yaml  environment.yml  forecast_dashboard.py  init_database.sh  kaggle_instructions.txt  kaggle_setup_instructions.md  metrics_results.txt  packages.txt  pr_description.md  prediction_results.txt  publish.sh  publish_github.sh  push_streamlit_cloud.sh  pyproject.toml  render.yaml  (+37 more)
.dvc/: config
.github/workflows/: ci.yml  deploy.yml
.streamlit/: config.toml  secrets.toml
airflow/dags/: sales_forecast_dag.py
config/: feature_config.yaml
data/db/: sales_forecasting.db
docs/: Audit_Narrative.md  ISO_Compliance_Summary.md
monitoring/: prometheus.yml
notebooks/: 01_exploratory_data_analysis.ipynb  exploratory_analysis.py
reports/: metrics.json  params.json
scripts/: encrypt_evidence_demo.py  simulate_cycle.py
src/: train_model.py  training_pipeline.py
src/aims/: flags.py  input_safety.py  logging_utils.py  qc.py
src/api/: __init__.py  main.py
src/dashboard/: __init__.py  app.py  app.py.backup  app.py.bak  streamlit_cloud_requirements.txt
src/data/: load_data.py  preprocess.py
src/database/: __init__.py  data_loader.py  database.py  init_db.py  models.py  repository.py  test_db.py
src/features/: __init__.py  enhanced_features.py  (+2 more)
tests/: test_load_data.py  test_ports.py
(+11 files in other folders)
