[tool.poetry]
name = "store-sales-forecasting"
version = "1.0.0"
description = "Advanced MLOps project for store sales forecasting"
authors = ["Fabio <fabio@example.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/yourusername/store-sales-forecasting"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.23.5"
pandas = "^1.5.3"
scikit-learn = "^1.2.2"
lightgbm = "^3.3.5"
prophet = "^1.1.4"
mlflow = "^2.3.1"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
pydantic = "^1.10.7"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
plotly = "^5.14.1"
scipy = "^1.10.1"
pyyaml = "^6.0"
joblib = "^1.2.0"
dvc = "^2.58.1"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.3.0"
jupyter = "^1.0.0"
jupyterlab = "^4.0.0"
ipykernel = "^6.23.0"
pre-commit = "^3.3.1"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.0.1"
sphinx-rtd-theme = "^1.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = [
    "pandas.*", 
    "numpy.*", 
    "sklearn.*", 
    "mlflow.*", 
    "prophet.*", 
    "lightgbm.*",
    "seaborn.*",
    "matplotlib.*",
    "plotly.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--verbose" 